--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "bcrypt": "^0.7.7",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
-    "connect-flash": "^0.1.1"
+    "connect-flash": "^0.1.1",
+    "mysql": "~2.5.3"
   },
   "devDependencies": {
     "mocha": "^1.18.0",
