--- a/package.json
+++ b/package.json
@@ -33,22 +33,32 @@
   },
   "homepage": "https://github.com/krakenjs/kraken-examples",
   "dependencies": {
-    "kraken-js": "^1.0.1",
-    "kraken-devtools": "^1.0.0",
-    "engine-munger": "^0.2.0",
-    "express": "^4.3.0",
+    "adaro": "~0.1.5",
+    "bcrypt": "^0.7.7",
+    "bl": "^0.9.3",
+    "connect-flash": "^0.1.1",
     "dustjs-helpers": "~1.2.0",
     "dustjs-linkedin": "~2.3.4",
-    "requirejs": "~2.1.11",
-    "adaro": "~0.1.5",
-    "localizr": "~0.1.0",
+    "engine-munger": "^0.2.0",
+    "express": "^4.3.0",
+    "hawk": "^2.3.0",
+    "json-stringify-safe": "^5.0.0",
+    "kraken-devtools": "^1.0.0",
+    "kraken-js": "^1.0.1",
     "less": "~1.7.0",
+    "localizr": "~0.1.0",
     "mongoose": "~3.8.8",
-    "bcrypt": "^0.7.7",
+    "mysql": "~2.5.3",
+    "oauth-sign": "^0.5.0",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
-    "connect-flash": "^0.1.1",
-    "mysql": "~2.5.3"
+    "qs": "^2.3.3",
+    "request": "^2.51.0",
+    "requirejs": "~2.1.11",
+    "servicecore": "^0.3.10",
+    "shelljs": "^0.3.0",
+    "tough-cookie": "^0.12.1",
+    "userread": "^1.1.0"
   },
   "devDependencies": {
     "mocha": "^1.18.0",
